<resources>
    <string name="app_name">Artemis</string>
    <string name="menu_camera_settings">Select Camera</string>
    <string name="menu_artemis_settings">Settings</string>
    <string name="menu_lens_settings">Select Lens</string>
    <string name="menu_artemis_gallery">Gallery</string>
    <string name="gps_on_off">Turn GPS On / Off</string>
    <string name="set_exposure_text">Set Exposure</string>
    <string name="set_flash_mode_text">Flash/Torch Mode</string>
    <string name="quickshot_text">QuickShot Mode</string>
    <string name="set_white_balance_text">Set White Balance</string>
    <string name="smooth_filter_text">Smooth Image Filter</string>
    <string name="heading_tilt_roll_text">Heading Options</string>
    <string name="heading_tilt_roll_promt">Select Heading Options</string>
    <string-array name="heading_tilt_roll_array">
        <item>None</item>
        <item>Heading°</item>
        <item>Heading°|Tilt°|Roll°</item>
    </string-array>
    <string name="select_language_text">Select Language</string>
    <string name="auto_focus_text">Auto Focus Images</string>
    <string name="artemis_about_title">About - Artemis for Android v</string>
    <string name="artemis_about_text">Artemis is a digital directors viewfinder designed
		with both cinematographers and directors in mind. Artemis works nearly
		the same way as a traditional directors viewfinder, though much more
		accurately and much more conveniently. After selecting a camera
		format, aspect ratio and lens type, Artemis uses the camera in your
		mobile device to simulate the lens views you can expect when you come
		to shoot. You can either compare all the lenses or hit zoom and the
		camera will zoom in to fill the viewfinder with the equivalent view of
		the lens you have chosen.
		What cameras are covered?

		Artemis has been
		field tested and tweaked with every camera in our database
		to make sure
		that the field of view is correct. With digital film
		cameras we found
		that relying on the information from camera
		manufacturers was not
		always wise.

		The following formats are covered so far:
		\n\nStandard and
		Super 16mm\nSuper 16mm Anamorphic\nStandard and Super 35mm\n35mm
		Anamorphic\n65mm\n35mm Digital (D-21, RED, F35, Genesis)\n2/3 Digital
		(F23, Viper)\n1/2 Digital\n1/3 Digital\nCanon 5D and 7D.\n\n
		If you
		find a format that\'s important to you is missing let us know and
		we\'ll do our best to add it in the next update.</string>
    <string name="chemical_wedding_about_text">Copyright 2010. Chemical Wedding.</string>
    <string name="loon_films_about_text">Artemis for Android was developed by Loon Films.</string>
    <string name="about_back_button">Back</string>
    <string name="camera_settings_title">Camera Settings</string>
    <string name="custom_camera_new_camera">NEW CUSTOM CAMERA</string>
    <string name="custom_camera_options">Custom Camera Options</string>
    <string name="custom_camera_edit_camera">Edit Camera</string>
    <string name="custom_camera_delete_camera">Delete Camera</string>
    <string name="lens_settings_title">Lens Settings</string>
    <string name="save_lenses">Save Lenses</string>
    <string name="image_saved_success">Saving image…</string>
    <string name="save_and_edit">Save and Edit Details</string>
    <string name="save_picture">Save Picture</string>
    <string name="gps_coordinates">GPS Location</string>
    <string name="gps_address">Address (instead of GPS)</string>
    <string name="camera_information">Camera Information</string>
    <string name="lens_information">Lens Information</string>
    <string name="cancel">Cancel</string>
    <string name="image_description_hint">Image title</string>
    <string name="sunrise_and_sunset_date_text">Sunrise and Sunset for location</string>
    <string name="h_and_v_angle_text">H and V Angle</string>
    <string name="vangle_text">V Angle</string>
    <string name="hangle_text">H Angle</string>
    <string name="tilt_and_direction_text">Tilt and Direction</string>
    <string name="exposure_text">Exposure</string>
    <string name="current_title_hint">Current Title</string>
    <string name="save_video_title">Save with Title</string>
    <string name="save_video">Save</string>
    <string name="custom_camera_name">CUSTOM CAMERA NAME</string>
    <string name="custom_camera_width">WIDTH</string>
    <string name="custom_camera_focallength">FOCAL LENGTH (50mm)</string>
    <string name="untitle_custom_cam">Untitled Custom Camera</string>
    <string name="custom_camera_error">Custom Camera Input Error</string>
    <string name="custom_camera_error_message">The was a problem adding the new custom camera.  Please verify that the input values are valid and try again.</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="error_dialog_title">Application license error</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase
		it from Android Market.</string>
    <string name="error_dialog_body">There was an error verifying the application
		license. If this problem persists, please contact support.</string>
    <string name="buy_button">Buy app</string>
    <string name="quit_button">Exit</string>
    <string name="gallery_no_images_found">No images found</string>
    <string name="artemis_save_folder_summary">The folder name to save the images you create with Artemis.  If a folder with this name doesn\'t already exist it will be created for you.</string>
    <string name="horizontal_lens_angle">Horizontal Lens Angle</string>
    <string name="vertical_lens_angle">Vertical Lens Angle</string>
    <string name="menu_artemis_quit">Quit</string>
    <string name="feedback_report_issue">Issue / Feedback</string>
    <string name="feedback_report_issue_description">Report and Issue or give us your feedback, we appreciate your comments.</string>
    <string name="menu_artemis_about">About</string>
    <string name="menu_artemis_about_description">A little about the app and its developers.</string>
    <string-array name="image_size_prefs">
        <item>Small</item>
        <item>Default</item>
        <item>Large</item>
    </string-array>
    <string-array name="backkey_prefs">
        <item>Exit Artemis immediately</item>
        <item>Prompt before closing</item>
        <item>Do nothing</item>
    </string-array>
    <string name="email_support">Email Support</string>
    <string-array name="longPressShutter_entries">
        <item>Autofocus camera and immediately capture image</item>
        <item>Autofocus camera and capture image on button release</item>
        <item>Autofocus camera only</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="volumeAction_entries">
        <item>Autofocus camera and immediately capture image</item>
        <item>Take a picture</item>
        <item>Autofocus camera</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="volumeAction_entries_noautofocus">
        <item>Take a picture</item>
        <item>Do nothing</item>
    </string-array>
    <string name="camera_device_will_not_autofocus">Camera device will NOT autofocus before taking each picture</string>
    <string name="camera_device_will_autofocus">Camera device will autofocus before taking each picture</string>
    <string name="auto_focus_behaviour_when_long_pressing">Auto focus behaviour when long pressing the camera shutter (capture image) button.</string>
    <string name="long_press_shutter_button_focus_behaviour">Long Press Shutter Button Focus Behaviour</string>
    <string name="torch_while_in_preview_mode">Camera device will use the torch while in preview mode</string>
    <string name="not_torch_while_in_preview_mode">Camera device will NOT use the torch while in preview mode</string>
    <string name="camera_preview_will_show_all_colors">Camera preview will show all colors</string>
    <string name="camera_preview_will_be_black_and_white">Camera preview will be black and white. Note: this will also affect saved images.</string>
    <string name="device_camera_behaviour">Device Camera Behaviour</string>
    <string name="device_camera_sensor">Device Camera Sensor</string>
    <string name="device_camera_angles">Device Camera Angles</string>
    <string name="use_the_custom_camera_angles">The application will use the custom values shown below.</string>
    <string name="use_detected_device_angles">The application will use the values automatically detected from the device (current values shown below).</string>
    <string name="detect_device_camera_angles_automatically">Detect Device Camera Angles Automatically</string>
    <string name="heading_summary">Choose what to display in the heading of the main app.</string>
    <string name="lockboxes_summary">Enable/Disable the Lens boxes from changing position on touch.</string>
    <string name="lock_lens_boxes">Lock Lens Boxes</string>
    <string name="backkey_summary">Choose the behaviour of the Android back button while the main app is running.</string>
    <string name="back_button_behaviour">Back Button Behaviour</string>
    <string name="haptic_feedback">Haptic Feedback</string>
    <string name="hapticfeedback_off_summary">Artemis will NOT provide haptic feedback on button presses.</string>
    <string name="haptic_feedback_on_summary">Artemis will provide haptic feedback on button presses.</string>
    <string name="keep_screen_on_summary">The screen will be kept on and NEVER timeout while the main app is running.</string>
    <string name="keep_screen_off_summary">The screen will timeout according to your devices default sleep setting.</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="screen_settings">Screen Settings</string>
    <string name="user_interface_behaviour">User Interface Behaviour</string>
    <string name="gps_summary_off">GPS is disabled. The device will not search for it\'s location.</string>
    <string name="gps_summary_on">GPS is enabled and the device will search for it\'s location.</string>
    <string name="key_mappings">Key Mappings</string>
    <string name="add_custom_camera_title">Add Custom Camera</string>
    <string name="custom_camera_squeeze_ratio">SQUEEZE RATIO (1.0)</string>
    <string name="custom_camera_aspect_ratio">ASPECT RATIO (1.78)</string>
    <string name="custom_camera_save_start_button">START</string>
    <string name="custom_camera_save_active_sensor">ACTIVE SENSOR SIZE</string>
    <string name="add_custom_camera_directions">Squeeze Ratio is 1.0 for spherical lenses,
         2.0 for standard 2:1 Anamorphic lenses and 1.3 for 1:3:1 Anamorphic lenses 
         (ie Hawk V-lite 1.3\'s). After filing the above fields click start and hold your device at the
         nodal point. If using a 50mm lens, the lens nodal point is 50mm in front of the sensor plane.
         Using the plus and minus buttons, match the image you see on Atemis to the image on the camera.
         The inside red buttons are for finer adjustment and press SAVE when you are happy. </string>
    <string name="image_note_hint">Additional notes</string>
    <string name="metadata_description">Metadata and Description</string>
    <string name="save">Save</string>
    <string name="image_contact_name_hint">Your contact name</string>
    <string name="image_contact_email_hint">Your email address</string>
    <string name="image_sunrise_and_sunset_hint">No date chosen yet</string>
    <string name="hundred_percent">100%</string>
    <string name="zero_percent">0%</string>
    <string name="percent_25">25%</string>
    <string name="percent_50">50%</string>
    <string name="percent_75">75%</string>
</resources>