<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical" android:layout_gravity="center"
	android:gravity="center">
	<TextView android:id="@+id/add_custom_camera_title"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="left" android:text="@string/add_custom_camera_title" />

	<LinearLayout android:layout_width="wrap_content"
		android:gravity="center" android:layout_height="wrap_content"
		android:orientation="horizontal">

		<EditText
		    android:id="@+id/custom_camera_name"
		    android:layout_width="480dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/custom_camera_name"
		    android:inputType="textCapWords"
		    android:maxLines="2"
		    android:nextFocusDown="@+id/custom_camera_distance"
		    android:textSize="6pt" />

	</LinearLayout>

	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="horizontal">

		<EditText
		    android:id="@+id/custom_camera_squeezeratio"
		    android:layout_width="150dip"
		    android:layout_height="wrap_content"
		    android:completionHint="@string/custom_camera_width"
		    android:gravity="center"
		    android:hint="@string/custom_camera_squeeze_ratio"
		    android:inputType="numberDecimal"
		    android:maxLines="1"
		    android:nextFocusDown="@+id/custom_camera_focallength"
		    android:textSize="6pt"
		    android:width="100dip" />

		<EditText
		    android:id="@+id/custom_camera_focallength"
		    android:layout_width="150dip"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15dip"
		    android:gravity="center"
		    android:hint="@string/custom_camera_focallength"
		    android:inputType="numberDecimal"
		    android:maxLines="1"
		    android:nextFocusDown="@+id/custom_camera_aspectratio"
		    android:textSize="6pt"
		    android:width="100dip" />

		<EditText
		    android:id="@+id/custom_camera_aspectratio"
		    android:layout_width="150dip"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15dip"
		    android:gravity="center"
		    android:hint="@string/custom_camera_aspect_ratio"
		    android:inputType="numberDecimal"
		    android:maxLines="1"
		    android:nextFocusDown="@+id/save_custom_camera"
		    android:textSize="6pt" />

	</LinearLayout>

	<ScrollView
	    android:id="@+id/ScrollView02"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="55dp"
	    android:layout_marginTop="5dp" >

		<TableLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:gravity="center_horizontal"
			android:layout_gravity="center">

			<TextView
			    android:id="@+id/add_custom_camera_directions"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/add_custom_camera_directions"
			    android:width="510dip" >
</TextView>
		</TableLayout>
	</ScrollView>

	<RelativeLayout android:layout_marginTop="-50dip"
		android:gravity="center" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:paddingTop="5dip">

		<Button
		    android:id="@+id/start_calib_custom_camera"
		    android:layout_width="200dp"
		    android:layout_height="wrap_content"
		    android:text="@string/custom_camera_save_start_button" />

		<Button
		    android:id="@+id/customCamera_active_sensor"
		    android:layout_width="200dp"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@+id/start_calib_custom_camera"
		    android:layout_alignBottom="@+id/start_calib_custom_camera"
		    android:layout_toRightOf="@+id/start_calib_custom_camera"
		    android:text="@string/custom_camera_save_active_sensor" />

	</RelativeLayout>

</LinearLayout>