<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.chemicalwedding.artemis.ArtemisViewFlipper
        android:id="@+id/savePictureViewFlipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#000"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/savePicturePreview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:background="@color/transparent_artemis_view"
                android:padding="1dp"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="bottom" >

                <Button
                    android:id="@+id/savePictureCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

                <View
                    android:layout_width="30dip"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/savePictureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_picture" />

                <View
                    android:layout_width="30dip"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/savePictureAndEditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_and_edit" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <ScrollView
                android:id="@+id/ScrollView_save_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".9" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dip"
                    android:paddingRight="15dip"
                    android:stretchColumns="0" >

                    <TableRow android:paddingBottom="10dip"
                        android:layout_width="match_parent">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:layout_span="2"
                            android:text="@string/metadata_description" />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip"
                        android:layout_width="match_parent"
                        >

                        <EditText
                            android:id="@+id/imageTitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/image_description_hint"
                            android:backgroundTint="@color/orangeArtemisText"
                            android:theme="@style/MyEditText"
                            android:inputType="text"
                            android:maxLines="1"
                            android:imeOptions="actionDone|flagNoFullscreen"
                            android:imeActionLabel="Done"
                            android:layout_span="2"
                            />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip"
                        android:layout_width="match_parent"
                        >
                        <EditText
                            android:id="@+id/imageNotes"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:maxLines="1"
                            android:imeOptions="actionDone|flagNoFullscreen"
                            android:imeActionLabel="Done"
                            android:layout_span="2"
                            android:hint="@string/image_note_hint" />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip"
                        android:layout_width="match_parent"
                        >
                        <EditText
                            android:id="@+id/imageContactName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:maxLines="1"
                            android:imeOptions="actionDone|flagNoFullscreen"
                            android:imeActionLabel="Done"
                            android:layout_span="2"
                            android:hint="@string/image_contact_name_hint" />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip"
                        android:layout_width="match_parent"
                        >
                        <EditText
                            android:id="@+id/imageContactEmail"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:maxLines="1"
                            android:imeOptions="actionDone|flagNoFullscreen"
                            android:imeActionLabel="Done"
                            android:layout_span="2"
                            android:hint="@string/image_contact_email_hint" />
                    </TableRow>
                    <TableRow android:paddingBottom="10dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/camera_information" />

                        <ToggleButton
                            android:id="@+id/cameraDetailsToggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true" />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lens_information" />

                        <ToggleButton
                            android:id="@+id/lensDetailsToggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true" />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gps_coordinates" />

                        <ToggleButton
                            android:id="@+id/gpsCoordinatesToggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true" />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gps_address" />

                        <ToggleButton
                            android:id="@+id/gpsAddressToggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true" />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tilt_and_direction_text" />

                        <ToggleButton
                            android:id="@+id/tilt_and_direction_toggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />
                    </TableRow>

                    <TableRow android:paddingBottom="10dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exposure_text" />

                        <ToggleButton
                            android:id="@+id/exposure_toggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />
                    </TableRow>

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="0,1" >

                        <TableRow android:paddingBottom="10dip" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableTint="@color/orangeArtemisText"
                                android:text="@string/sunrise_and_sunset_date_text" />

                            <EditText
                                android:id="@+id/sunrise_and_sunset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:hint="@string/image_sunrise_and_sunset_hint"
                                android:inputType="date"
                                android:focusable="false"
                                android:cursorVisible="false"/>

                            <ToggleButton
                                android:id="@+id/sunrise_and_sunset_toggle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true" />
                        </TableRow>

                    </TableLayout>

                </TableLayout>

            </ScrollView>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dip"
                android:gravity="center" >

                <Button
                    android:id="@+id/save_edit_details_PictureCancelButton"
                    android:layout_width="140dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_primary"
                    android:textColor="@color/orangeArtemisText"
                    android:gravity="center"
                    android:text="@string/cancel" />

                <View
                    android:layout_width="50dip"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/savePictureDetails"
                    android:layout_width="140dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_primary"
                    android:textColor="@color/orangeArtemisText"
                    android:gravity="center"
                    android:text="@string/save" />
            </RelativeLayout>
        </LinearLayout>
    </com.chemicalwedding.artemis.ArtemisViewFlipper>

</LinearLayout>