<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/framelineShadingMenu"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="bottom|center"
    android:background="@drawable/cameraoverlay_bottom"
    android:gravity="left|center_vertical"
    app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_bottom"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:orientation="horizontal"
    android:visibility="gone"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="right|center_vertical"
        android:layout_marginLeft="8dp"
        >
        <TextView
            android:id="@+id/shading0percent"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/zero_percent"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/button_shading_0"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="12dp"
            android:layout_marginRight="8dp"
            />

        <TextView
            android:id="@+id/shading25percent"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/percent_25"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/button_shading_25"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="12dp"
            android:layout_marginRight="8dp"
            />

        <TextView
            android:id="@+id/shading50percent"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/percent_50"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/button_shading_50"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="12dp"
            android:layout_marginRight="8dp"
            />

        <TextView
            android:id="@+id/shading75percent"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/percent_75"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/button_shading_75"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="12dp"
            android:layout_marginRight="8dp"
            />

        <TextView
            android:id="@+id/shading100percent"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/hundred_percent"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/button_shading_100"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="12dp"
            android:layout_marginRight="8dp"
            />
    </LinearLayout>

</LinearLayout>
