<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_margin="10dp"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            />

        <Button
            android:id="@+id/saveVideoCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <View
            android:layout_width="30dip"
            android:layout_height="2dp"
            android:layout_weight="2"
            />

        <Button
            android:id="@+id/saveVideoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_video" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            />

        <Button
            android:id="@+id/saveVideoAndEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_and_edit" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            />
    </LinearLayout>
</FrameLayout>

